src/snapshots/afrotd__parser__tests__interpreation_html_9.1.6_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.I
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-40. Back A44 hat sich hinter dem rechten Tackle
            A69 aufgestellt. Dabei befindet sich A44’s linker Fuß innerhalb von
            A69’s äußerem Fuß. Beim Snap läuft A44 nach links durch das Offense
            Backfield und blockt B77 von der Seite unter der Gürtellinie. Zum
            Zeitpunkt des Blocks befindet sich B77 innerhalb der Tackle Box
            einen Meter im Offense Backfield. Beim Lauf erzielt A33 einen
            Raumgewinn von 12 Metern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler tiefer Block durch A44, denn der Block kommt nicht
                direkt von vorne. Stationäre Backs, die sich innerhalb der
                Tackle Box aufgestellt haben, dürfen unter der Gürtellinie in
                der Tackle Box blocken, solange der Ball die Tackle Box noch
                nicht verlassen hat, solange der Block direkt von vorne
                erfolgt. Die 15-Meterstrafe wird vom Previous Spot geahndet.
                A’s Ball, 1. und 25 von der A-25.
            </p>
        </details>
    </div>
</article>
