src/snapshots/afrotd__parser__tests__interpreation_html_9.1.6_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.II
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der A-40. Back A44 hat sich stationär vier Meter im
            Offense Backfield, direkt hinter dem rechten Tackle A69
            aufgestellt. Nach dem Snap geht QB A12 innerhalb der Tackle Box
            weit zurück und schaut nach einem freien Receiver. Linebacker B55
            stürmt zwischen Guard und Tackle auf der linken Seite durch. A44
            läuft auf die linke Seite und blockt B55 unter der Gürtellinie an
            der A-36. Der Block ist direkt von vorne. Nach dem Block fängt A88
            einen Vorwärtspass von A12 zu einem Raumgewinn von 15 Metern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legaler tiefer Block durch A44. A44 hatte sich beim Snap in
                einer stationäre Position innerhalb der Tackle Box befunden,
                der Block ereignete sich innerhalb der Tackle Box direkt von
                vorne gegen einen Gegner und der Ball hatte die Tackle Box noch
                nicht verlassen. A’s Ball, 1. und 10 von der B-45.
            </p>
        </details>
    </div>
</article>
