src/snapshots/afrotd__parser__tests__interpreation_html_9.1.6_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.6.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Back A22 steht stationär innerhalb der Tackle Box beim Snap. Nach
            dem Snap stürmt A22 durch die Lücke zwischen Guard und Tackle und
            blockt B55 direkt von vorne unter der Gürtellinie. Der Kontakt
            ereignet sich drei Meter jenseits der neutralen Zone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illega- ler tiefer Block. Der Block ist zwar direkt von vorne,
                ereignet sich aber jenseits der neutralen Zone.
            </p>
        </details>
    </div>
</article>
