src/snapshots/afrotd__parser__tests__interpreation_html_9.2.1_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ballträger getackelt wurde, beteiligen sich A55 und B73
            an einem Gerangel und die Schiedsrichter müssen sie trennen. Es
            werden Flaggen geworfen. Sowohl A55 als auch B73 werden mit einem
            persönlichen Dead Ball Foul belastet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Dead Ball Fouls gleichen sich aus. Diese persönlichen Dead
                Ball Fouls werden gleichzeitig als unsportliches Verhalten
                angesehen. Das führt dazu, dass ein weiteres Foul für
                unsportliches Verhalten durch einen der beiden Spieler die
                automatische Disqualifikation des Betreffenden bedeutet. Der
                Referee soll ansagen, dass es sich jeweils entweder um das
                erste oder das zweite Unsportliche Verhalten Foul von A55 und /
                oder B73 handelt.
            </p>
        </details>
    </div>
</article>
