src/snapshots/afrotd__parser__tests__interpreation_html_9.2.1_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.V
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 7 von der B-30. Nose Guard B55 hat sich beim Snap in der
            neutralen Zone aufgestellt. Back A22 erhält den Handoff als er
            durch die Mitte stürmt. Er läuft sich frei und advanct weiter in
            Richtung Goalline. An der B-10 dreht er sich und streckt
            provozierend den Ball dem ihn verfolgenden B91 entgegen.
            Anschließend dreht sich A22 wieder und überquert mit dem Ball die
            Goalline.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Unsportliches Verhalten, Defense Offside. Die Fouls heben sich
                auf, der Down wird wiederholt. A’s Ball, 2. und 7 von der B-30.
            </p>
        </details>
    </div>
</article>
