src/snapshots/afrotd__parser__tests__interpreation_html_9.2.1_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 15 von der A-45. A12 geht zurück, um einen Pass zu werfen.
            Er wird von Tackle B77 für einen Raumverlust von 10 Metern gesackt.
            B77 springt auf seine Füße, schlägt gegen seine Brust und beleidigt
            und verhöhnt A12. Er erhält dafür Flaggen vom Referee und dem
            Linejudge.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul für unsportliches Verhalten. 15-Meterstrafe vom
                Dead Ball Spot und automatisch First Down. A’s Ball, 1. und 10
                von der 50.
            </p>
        </details>
    </div>
</article>
