src/snapshots/afrotd__parser__tests__interpreation_html_9.2.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball spielbereit ist, stellt sich Team A in einer
            Formation auf, wobei sich zwei Spieler weit entfernt auf beiden
            Seiten des Snappers aufstellen und zwei andere Spieler sich in der
            Nähe des Snappers aufstellen. Es befinden sich nicht mehr als vier
            Spieler legal im Backfield. Team A schickt zwei Ersatzspieler auf
            das Spielfeld, die sich beide auf der Spielfeldseite, die von der
            eigenen Teamzone am weitesten entfernt ist, in der Nähe der beiden
            äußeren Linemen der Offense Formation aufstellen. Dadurch stehen
            bei Team A neun Spieler an der Scrimmage Line und vier Spieler im
            Backfield. Vor dem Snap verlassen die beiden Spieler, die sich in
            der Nähe der eigenen Teamzone befinden, das Spielfeld und haben es
            beim Snap verlassen. Sieben Spieler stehen damit an ihrer
            Scrimmage- Line, fünf von ihnen sind Team A-Linemen mit einer
            Nummer von 50 bis 79.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Previous Spot. Das ist ein vorgetäuschtes
                Auswechseln, um die Gegner zu verwirren.
            </p>
        </details>
    </div>
</article>
